2002-07-26  John Sullivan  <sullivan@apple.com>

	WebKit part of fix for 3009404 -- Back/Forward menu items should use [ and ],
	but command-arrows should still work too. 

        * WebView.subproj/WebController.h:
	- added goForward to windowContext protocol. This is temporary, just like goBack
	here is temporary; they can be migrated into the new back-forward-in-WebKit design
	together.
        * WebView.subproj/WebView.m:
        (-[WebView keyDown:]): call _goBack and _goForward for command-arrow keys

        * WebView.subproj/WebViewPrivate.h,
        * WebView.subproj/WebViewPrivate.m:
        (-[WebView _goForward]): add _goForward, parallel to _existing goBack.

2002-07-26  Chris Blumenberg  <cblu@apple.com>

	Fixed crash in unknown_text
	Fixed full-window plug-ins. I think darin broken this :)
	Cleaned up WebPluginStream a bit

        * Plugins.subproj/WebPluginDatabase.m:
        (-[WebPluginDatabase init]):
        * Plugins.subproj/WebPluginStream.m:
        (-[WebPluginStream getFunctionPointersFromPluginView:]):
        (-[WebPluginStream initWithURL:pluginPointer:notifyData:attributes:]):
        (-[WebPluginStream startLoad]):
        (-[WebPluginStream stop]):
        (-[WebPluginStream setUpGlobalsWithHandle:]):
        (-[WebPluginStream receivedError:]):
        (-[WebPluginStream receivedData:withDataSource:]):
        (-[WebPluginStream receivedError:withDataSource:]):
        (-[WebPluginStream WebResourceHandle:dataDidBecomeAvailable:]):
        (-[WebPluginStream WebResourceHandleDidCancelLoading:]):
        (-[WebPluginStream WebResourceHandle:didFailLoadingWithResult:]):
        * WebView.subproj/WebDataSourcePrivate.h:
        * WebView.subproj/WebDataSourcePrivate.m:
        (-[WebDataSource _mainHandle]): added, WebPluginStream needs this

2002-07-25  Richard Williamson (Local)  <rjw@apple.com>

        More incremental changes for back/forward migration.

        * History.subproj/WebBackForwardList.h: