@@ -1,3 +1,11 @@
+2002-07-26  Richard Williamson  <rjw@apple.com>
+
+        WebframeLoadType enum first value was explicitly set, so 0 was used.  
+        I assumed 0 was unitialized, and depended on that to not execute some 'transitional'
+        back/forward.  This problem broke back/forward.
+
+        * WebView.subproj/WebFramePrivate.h:
+
 2002-07-26  John Sullivan  <sullivan@apple.com>
 
 	WebKit part of fix for 3009404 -- Back/Forward menu items should use [ and ],
